--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/ams
 spring.datasource.password=Pa$$word9d99it2
 spring.datasource.username=postgres
+# You can add other properties as you want!!!!
