API Spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/ams
 spring.datasource.password=Pa$$word9d99it2
 spring.datasource.username=postgres
-# You can add other properties as you want!!!!
+# Server Pth and Client path
+file.upload.server-path=/Volumes/Mac Data/Exercise/Spring boot/Thymeleaf-SpringBoot/server/
+file.upload.client-path=/images/**
+
+app.base-url = http://localhost:9001
+
+springdoc.api-docs.path=/api-docs
